1997-12-09  Samuel Tardieu <sam@inf.enst.fr>

        * s-gaphlo.adb: Add debugging information.

        * s-gartcp.adb: Better debugging messages.

        * Makefile.am (s-gafizi.o): Get rid of s-garpoi.ad[bs].

        * s-rpcini.ads: (Shutdown): new procedure.

        * s-rpcini.adb: (Shutdown): new procedure.

        * s-rpc.ads: Export Shutdown procedure.

        * s-rpc.adb: (Shutdown_Waiter): now useless task removed.

        * s-garthi.ads: Use Interfaces.C.Pointers rather than
        System.Garlic.Pointers now that we can have use clauses in a
        generic body used in a system spec.

        * s-garrep.adb: Do not create any replay task if the replay
        protocol is not in use.

        * s-garhea.adb: Shutdown the partition in any case if a partition
        fails and the policy is Shutdown_On_Any_Partition_Error.

1997-12-09  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garuti.adb, s-garuti.ads: Add critical section utilities.

	* s-ganata.adb: Implementation of an hash table.

	* s-garuni.adb, s-garuni.ads: Instanciation of Garlic.Table for
 	Units.

	* s-gartab.adb, s-gartab.ads: Implementation of two generic
 	tables. Concurrent is a generic table which allows atomic
 	operations on items in the table. Sequential table is a more
 	classical generic table.
	
	* s-parint.adb: New RCI Name Server implementation. Use garlic
	generic tables and hash table.

1997-12-08  Samuel Tardieu <sam@inf.enst.fr>
        
        * s-rpc.ads: (Get_RPC_Receiver): new private function.
        
        * s-rpc.adb: (Get_RPC_Receiver): new function.
        (Current_RPC_Receiver): new atomic variable holding the current
        RPC receiver.
        (Current_RPC_Receiver_Barrier): barrier to wait for the RPC
        receiver to be installed.
        
        * s-rpcpoo.adb: Use Get_RPC_Receiver instead of Receiver_Map.
        
        * s-rpcuti.ads: Remove useless Receiver_Map.
        
        * s-garcac.ads, s-garcac.adb: Obsolete files.
        