@@ -1,3 +1,8 @@
+1997-12-10  Samuel Tardieu  <sam@inf.enst.fr>
+
+	* s-garter.adb: Use polling rather than "select delay then abort"
+	because of a bug in GNAT RTS which causes a lockup.
+
 1997-12-09  Samuel Tardieu <sam@inf.enst.fr>
 
         * s-gaphlo.adb: Add debugging information.
